--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,47 +1,27 @@
-name: CML
-
+name: wine-jfc
 on: [push]
-
 jobs:
   run:
-    runs-on: [ubuntu-latest]
-
+    runs-on: ubuntu-latest
+    # optionally use a convenient Ubuntu LTS + DVC + CML image
+    container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-
+      # may need to setup NodeJS & Python3 on e.g. self-hosted
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '16'
+      # - uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.x'
       - uses: iterative/setup-cml@v1
-
-      - uses: iterative/setup-dvc@v1
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: cml
+      - name: cml_run
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS }}
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Your ML workflow goes here
           pip install -r requirements.txt
-
-          # Pull dataset with DVC
-          dvc pull data
-
-          # Reproduce pipeline if any changes detected in dependencies
-          dvc repro
-
-          # Use DVC metrics diff to compare metrics to master
-          git fetch --prune --unshallow
-          #dvc metrics diff --show-md master >> report.md
-          dvc metrics diff master >> report.md
-
-          # Add figure to report
-          dvc plots diff --target loss.csv --show-vega master > vega.json
-          vl2png vega.json -s 1.3 > vega.png
-          echo '![](./loss_curve.png)' >> report.md
-          cml comment create --pr --publish report.md
-
+          python train.py
+          
+          echo "METRICAS DEL MODELO"
+          cat metrics.json
