--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -37,6 +37,7 @@ jobs:
       - uses: actions/checkout@v3
       # Configura Node y Python si es necesario
       - uses: iterative/setup-cml@v1
+      - uses: actions/checkout@v2
       - name: cml_run
         env:
           REPO_TOKEN: ${{ secrets.TOKEN_GIT }}
