--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -34,10 +34,10 @@ jobs:
   train-model:
     runs-on: [self-hosted]
     steps:
-      - uses: actions/checkout@v3
+      #- uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       # Configura Node y Python si es necesario
       - uses: iterative/setup-cml@v1
-      - uses: actions/checkout@v2
       - name: cml_run
         env:
           REPO_TOKEN: ${{ secrets.TOKEN_GIT }}
