--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -34,9 +34,13 @@ jobs:
   train-model:
     runs-on: [self-hosted, label-2]
     steps:
-      #- uses: actions/checkout@v3
-      - uses: actions/checkout@v2
-      - uses: iterative/setup-cml@v1
+      - uses: actions/checkout@v3
+      #- uses: actions/checkout@v2
+      #- uses: iterative/setup-cml@v1
+      - uses: iterative/setup-cml@v2
+        with:
+          version: 'v0.20.0'
+          vega: false
       - name: cml_run
         env:
           REPO_TOKEN: ${{ secrets.TOKEN_GIT }}
