--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -32,20 +32,19 @@ name: wine-jfc
 on: [push]
 jobs:
   train-model:
-    runs-on: [self-hosted, label-1, label-2]
+    runs-on: [self-hosted, lebel-1]
     steps:
       - uses: actions/checkout@v3
-      #- uses: actions/checkout@v2
-      #- uses: iterative/setup-cml@v1
       - uses: iterative/setup-cml@v2
       - name: cml_run
         env:
-           REPO_TOKEN: ${{ secrets.TOKEN_GIT }}
+          REPO_TOKEN: ${{ secrets.TOKEN_GIT }}
         run: |
-           # flujo de trabajo de ML
-           pip install -r requirements.txt
-           python train.py
+          # flujo de trabajo de ML
+          pip install -r requirements.txt
+          python train.py
           
-           echo "METRICAS DEL MODELO"
-           cat metrics.json
+          echo "METRICAS DEL MODELO"
+          cat metrics.json
+
 
