--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -32,7 +32,7 @@ name: wine-jfc
 on: [push]
 jobs:
   train-model:
-    runs-on: [self-hosted, lebel-1]
+    runs-on: [self-hosted, label-1, label-2]
     steps:
       - uses: actions/checkout@v3
       - uses: iterative/setup-cml@v2
